# Superchip-Emulator

./: .gitignore  CMakeLists.txt  README.md  config.h.in  custom.js  index.data  index.html  index.js  index.wasm  style.css
games/: Blitz.ch8  zhunder.ch8
include/: audio.hpp  chip8.hpp  constants.hpp  graphics.hpp
src/: audio.cpp  chip8.cpp  graphics.cpp  inputs.cpp  main.cpp
web/: custom.js  index.html  index.js  index.wasm  style.css
